# compose-icons

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-countryflags  README.md  build.gradle.kts  gradle.properties  icon-libraries-report.html  settings.gradle.kts
api-snapshots/: icons-bootstrap.txt  icons-boxicons.txt  icons-carbon.txt  icons-circleflags.txt  icons-countryflags.txt  icons-flagicons.txt  icons-heroicons.txt  icons-iconoir.txt  icons-iconsax.txt  icons-ionicons.txt  icons-lucide.txt  icons-mdi.txt  icons-octicons.txt  icons-phosphor.txt  icons-radix.txt  icons-remix.txt  icons-simpleicons.txt  icons-tabler.txt
benchmark/: build.gradle.kts
buildSrc/: build.gradle.kts
compose-icons-bom/: build.gradle.kts
demo/: build.gradle.kts
docs/: 01_design_specification.md  02_implementation_tasks.md  03_path_compaction.md  04_innovation_ksp_scanner.md  05_innovation_shared_path_pool.md  06_innovation_canonical_hash_pool.md  07_new_icon_library_integration_plan.md  08_generator_dedup_refactor.md  DESIGN.md  (+4 more)
tools/svg2compose/: Cargo.toml
tools/svg2compose/src/: canonical_hash.rs  codegen.rs  compact.rs  converter.rs  lib.rs  main.rs  manifest.rs  path_dedup.rs  protocol.rs
tools/svg2compose/test-icons/src/main/kotlin/composeicons/test/regular/: GroupWithClip.kt  MaskPanel.kt  PathWithTransform.kt  SinglePath.kt
tools/svg2compose/tests/: README.md  integration_test.rs  run_all_verifications.sh  snapshot_test.rs  test-manifest.json  verify_codegen.sh  verify_kotlin_syntax.sh
tools/svg2compose/tests/snapshots/: GroupWithClip.kt  SinglePath.kt
(+57715 files in other folders)
