[package]
name = "svg2compose"
version = "0.1.0"
edition = "2021"

[lib]
name = "svg2compose"
path = "src/lib.rs"

[[bin]]
name = "svg2compose"
path = "src/main.rs"

[dependencies]
usvg = "0.47"
tiny-skia-path = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"

[dev-dependencies]
# 使用 Rust 内置 #[test]
